# parametric

./: .gitignore  README.md  constraints.py  drawables.py  expressions.py  parametric.py  primitives.py  properties.py  scene.py  setup.cfg  test.py  variables.py
parametric/: __init__.py  constraints.py  objects.py  solver.py  util.py
parametric/util/: __init__.py  dynamic_array.py  indexed_dict.py
tests/: expr_tests.py  test_constraints.py  test_dynamic_array.py  test_indexed_dict.py
tests/util/: test_dynamic_array.py  test_indexed_dict.py
