[metadata]
name=parametric
verion=0.1.0
description=Parametric constriaint solver for CAD
keywords=parametric, cad, solver
url=http://github.com/bluecube/parametric
author=Kuba Marek
author_email=blue.cube@seznam.cz
license=GPL

[options]
packages=find:
zip_safe=true
install_requires=scipy>=0.19.1
setup_requires=pytest-runner
tests_require=pytest>=3.1.0
python_requires=~=3.4

[aliases]
test=pytest

[tool:pytest]
filterwarnings=error
testpaths=tests

[coverage:run]
branch=True

[pylama]
ignore=E501,E741
paths=parametric tests
linters=pycodestyle
