[metadata]
name=parametric
verion=0.1.0
description=Parametric constriaint solver for CAD
keywords=parametric, cad, solver
url=http://github.com/bluecube/parametric
author=Kuba Marek
author_email=blue.cube@seznam.cz
license=GPL

[options]
packages=find:
zip_safe=true
install_requires=
    scipy>=0.19.1
    autograd>=1.2
    collections-extended>=1.0.2
setup_requires=pytest-runner
tests_require=pytest>=3.1.0
python_requires=~=3.4

[aliases]
test=pytest

[tool:pytest]
filterwarnings=error
testpaths=tests

[coverage:run]
branch=True

[pylama]
ignore=E501,E741,E203,W0401
paths=codecad examples tests
linters=pycodestyle,pyflakes,pylint,mccabe

[pylama:pylint]
disable=C0102,C0111,C1801,C0330,C0301,R1705,R0902,R0903,R0912,R0913,R0914,R0915,W0102,W0223,W0614
ignored-classes=mem_flags,map_flags,command_queue_properties
ignored-modules=pyopencl.cltypes
function-rgx=^[_a-z][a-z0-9]*(_[a-z0-9]+)*$
variable-rgx=^[_a-z][a-z0-9]*(_[a-z0-9]+)*$
argument-rgx=^[_a-z][a-z0-9]*(_[a-z0-9]+)*$
attr-rgx=^[_a-z][a-z0-9]*(_[a-z0-9]+)*$
const-rgx=^[_a-z][a-z0-9]*(_[a-z0-9]+)*|[_A-Z][A-Z0-9]*(_[A-Z0-9]+)*$
